# NihongoSpeak

./: .gitignore  .verdentignore  =2.30.0  Cargo.toml  README.md  agent_response.md  ai_engine.py  app.py  audio_manager.py  build.rs  config.py  env.example  main.py  pronunciation_scorer.py  requirements.txt  run_agent.py  tts_engine.py
.clawhub/: lock.json
.github/workflows/: opencode.yml
.verdent/skills/mcp-builder/: SKILL.md
.verdent/skills/mcp-builder/agents/: verdent.yaml
.verdent/skills/mcp-builder/reference/: node_mcp_server.md
resources/: system_prompt.txt
scripts/: record_audio.py  stop_recording.py  transcribe.py  tts.py
skills/opencode-controller/.clawhub/: origin.json
src/: ai_engine.py  app.py  audio.rs  audio_manager.py  config.py  config.rs  flet_app.py  flet_components.py  main.py  main.rs  pronunciation_scorer.py  session.rs  session_memory.py  tts_engine.py  utils.py  vocab.rs  vocab_tracker.py
src/utils/: __init__.py  japanese_utils.py
ui/: app.slint  main_window.slint
