[package]
name = "nihongo-sensei"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
description = "日本語 Sensei — Immersive Japanese Language Tutor built with Slint"
license = "MIT"
repository = "https://github.com/dariusconca170-prog/NihongoSpeak"

[dependencies]
slint = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5.0"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"
parking_lot = "0.12"
once_cell = "1.19"

[build-dependencies]
slint-build = "1.9"

[features]
default = []
