[package]
name = "nihongo-sensei"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
description = "日本語 Sensei — Immersive Japanese Language Tutor built with Slint"
license = "MIT"

[dependencies]
slint = "1.9"
slint-center-win = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
dirs = "5.0"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
parking_lot = "0.12"
once_cell = "1.19"
urlencoding = "2"
rodio = "0.17"

[build-dependencies]
slint-build = "1.9"

[features]
default = []
